--- a/components/users/NewUserForm.module.css
+++ b/components/users/NewUserForm.module.css
@@ -19,7 +19,7 @@
   border-radius: 4px;
   border: 1px solid #ccc;
   padding: 0.25rem;
-  width: 100%;
+  width: 200px;
 }
 
 .actions {
@@ -46,4 +46,9 @@
 
 .invalid-feedback {
   color: red;
+}
+
+.left {
+  width: 50%;
+  float: left;
 }
