--- a/pages/globals.css
+++ b/pages/globals.css
@@ -26,3 +26,11 @@ a {
 input[type='file'] {
   color: rgba(0, 0, 0, 0);
 }
+
+h1 {
+  text-transform: capitalize;
+}
+
+p::first-letter {
+  text-transform: uppercase;
+}
