--- a/pages/recipes/RecipePage.module.css
+++ b/pages/recipes/RecipePage.module.css
@@ -25,3 +25,9 @@
 .flexHeader a {
   padding: 0 0.5rem;
 }
+
+.selector-container {
+  margin-left: auto;
+  width: 300px;
+  margin-right: 30px;
+}
