--- a/pages/recipes/RecipePage.module.css
+++ b/pages/recipes/RecipePage.module.css
@@ -31,3 +31,16 @@
   width: 300px;
   margin-right: 30px;
 }
+
+.chip-container {
+  justify-content: space-between;
+  display: flex;
+  width: 260px;
+  padding-top: 10px;
+}
+
+.actions {
+  justify-content: space-between;
+  display: flex;
+  width: 400px;
+}
