--- a/pages/recipes/RecipePage.module.css
+++ b/pages/recipes/RecipePage.module.css
@@ -64,3 +64,9 @@
   justify-content: space-around;
   align-items: center;
 }
+
+.user-follow {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
