feat(feed): feed following

--- a/pages/recipes/RecipePage.module.css
+++ b/pages/recipes/RecipePage.module.css
@@ -70,3 +70,9 @@
   justify-content: space-between;
   align-items: center;
 }
+
+.flex {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
